@@ -1,6 +1,6 @@
 Notes:
 Create schema change script for UserSetting table change
-
+Regenerate the CreateNewDatabase-SQL2005 script.
 
 Next version target:
 ====================
@@ -31,6 +31,7 @@ FIX: Issue 96:	Update widget: not all properties are updated
 FIX: Issue 95:	Delete widget: Reference constraint errors when widget is used in roles, or added to portal
 FIX: Issue 94:	Delete widget: cache is not emptied
 FIX: Issue 90:	changing page layout - loss of widgets
+FIX: Issue 88:	Maximized widget has 'Move' cursor in widgetheader
 
 Version 2.6.1
 ==============
